--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -1,4 +1,4 @@
 \begin{abstract}
-\textit{Context: }Integration of agile software development process (ASDP) with user-centred design (UCD) has awakened the interest of researchers during the last decade. However, to the best of our knowledge a formal procedure to incorporate techniques to evaluate usability into ASDP has not been reported in the literature. \textit{Aim: } To identify usability techniques related to evaluation activities which are being incorporated into ASDP and practicalities of its use. \textit{Method: }Based on primary studies of a previous systematic mapping study about application of usability techniques in ASDP, we conducted an analysis of such techniques through a compiled catalog of usability techniques made by researchers of Software Engineering. Finally, we determined the procedure performed for the application of each technique into ASDP. \textit{Results: }The agile community show great interest in the incorporation of usability evaluation techniques. However, there is no consensus on how to apply these techniques as a formal and systematic way. We identified four evaluation techniques that are the most used in ASDP: Usability Test, Heuristic Evaluation, Thinking Aloud and Focus Group. \textit{Conclusions:} The analysis of evaluation usability techniques and its use provided us an overview of activities performed to incorporate such techniques into ASDP and identify specific techniques that are being incorporated.
+\textit{Context: }Integration of agile software development process (ASDP) with user-centred design (UCD) has awakened the interest of researchers during the last decade. However, to the best of our knowledge there is no clarity about what techniques or methods are being applied and how to apply them. \textit{Aim: } Our purpose is to identify Usability Evaluation Methods (UEM) which are being incorporated into ASDP and practicalities of its use. \textit{Method: }Based on primary studies of a previous systematic mapping study about application of usability methods in ASDP, we conducted an analysis of such methods through a compiled catalog of usability methods made by researchers of Software Engineering. Finally, we determine the form or type of application of each method into ASDP. \textit{Results: }The agile community show great interest in the incorporation of usability evaluation methods. However, there is no consensus on how to apply these techniques within the agile community. We identify four UEMs within the literature that are the most used in ASDP: Usability Test, Heuristic Evaluation, Thinking Aloud and Focus Group. \textit{Conclusions:} The analysis of usability evaluation methods and its use provided us specific methods that are being incorporated and an overview of activities performed to incorporate such methods into ASDP, which will be an input to define a unified framework of usability evaluating methods in ASDP.
 \input{tex/keywords}
 \end{abstract}
