Cambios en trabajos relacionados

--- a/Bibliografia.bib
+++ b/Bibliografia.bib
@@ -594,6 +594,20 @@
   Timestamp                = {2015.10.22}
 }
 
+@INPROCEEDINGS{Jurca2014, 
+author={G. Jurca and T. D. Hellmann and F. Maurer}, 
+booktitle={2014 Agile Conference}, 
+title={Integrating Agile and User-Centered Design: A Systematic Mapping and Review of Evaluation and Validation Studies of Agile-UX}, 
+year={2014}, 
+volume={}, 
+number={}, 
+pages={24-32}, 
+abstract={Agile software engineering and user-centered design are two important development processes for ensuring that an application has good user experience. However, integrating these two different processes into a single Agile-UX approach remains difficult. We performed a systematic mapping study to identify relevant research and understand what the field of Agile-UX looks like at present. This mapping discovered that there were only a few evaluation and validation papers published to date, so we performed a review of these papers to better understand the recommendations of these types of papers. Based on this, we are able both to provide a discussion of common trends in these papers that should be of interest to practitioners and to identify gaps in existing literature that indicate strong opportunities for future work.}, 
+keywords={software prototyping;user centred design;agile software engineering;agile user experience;agile-UX approach;evaluation studies;gap identification;systematic mapping;user-centered design;validation studies;Bibliographies;Collaboration;Companies;Market research;Systematics;Usability;User centered design;agile;empirical studies;literature review;systematic mapping;user experience;user-centered design}, 
+doi={10.1109/AGILE.2014.17}, 
+ISSN={}, 
+month={July},}
+
 @Article{Juristo2007,
   Title                    = {Guidelines for Eliciting Usability Functionalities},
   Author                   = {N. Juristo and A. Moreno and M. I. Sanchez-Segura},
