--- a/paper.tex
+++ b/paper.tex
@@ -74,10 +74,10 @@
 \mainmatter  % start of an individual contribution
 
 % first the title is needed
-\title{Evaluation Usability Techniques Adopted in Agile Development Processes}
+\title{Usability Evaluation Methods Adopted in Agile Development Processes}
 
 % a short form should be given in case it is too long for the running head
-\titlerunning{Evaluation Usability Techniques}
+\titlerunning{Usability Evaluation Methods in ASDP}
 
 % the name(s) of the author(s) follow(s) next
 %
@@ -98,7 +98,7 @@
 \\$^{2}$Departamento de Ciencias de la Computación, Universidad de las Fuerzas Armadas ESPE, Sangolqu\'i, Ecuador
 \\$^{3}$Departamento de Ingeniería Informática y Ciencias de la Computación, Universidad de Atacama, Copiap\'o, Chile
 \\
-%\url{http://www.springer.com/lncs}}
+%\url{http://www.springer.com/lncs}	}
 \mailsa\\	
 \mailsb\\
 \mailsc\\
