--- a/tex/related.tex
+++ b/tex/related.tex
@@ -1,5 +1,11 @@
 \section{Trabajos Relacionados}\label{sec-relacionados}
-Para investigar de manera general, entre otros aspectos, las técnicas de usabilidad que pueden ser incorporadas en los PDSA, algunos investigadores han realizado estudios empíricos \cite{Broschinsky2008,Grigoreanu2013,Hodgetts2005}, mientras que otros pocos han estudiado la literatura \cite{Salah2014b,Brhel2015}. El objetivo de nuestra investigación es conocer el estado actual de la usabilidad en los PDSA desde una perspectiva más amplia. Para analizar los beneficios de la usabilidad en los PDSA e identificar qué técnicas de usabilidad relacionadas con la actividad de Evaluación están siendo adoptadas y cómo están siendo adoptadas, hemos llevado a cabo un \textit{Systematic Mapping Study} (SMS) sobre la usabilidad y los PDSA. Este SMS se diferencia de otros trabajos similares \cite{Salah2014b}\cite{Brhel2015}\cite{DaSilva2011} porque busca identificar en la literatura existente trabajos con propuestas que permitan incorporar un conjunto de técnicas de usabilidad para integrar los PDSA con el DCU de una manera formalizada y sistematizada. Aspecto que ninguno de los tres trabajos similares mencionados anteriormente considera.\par
+Para investigar de manera general, entre otros aspectos, las técnicas de usabilidad que pueden ser incorporadas en los PDSA, algunos investigadores han realizado estudios empíricos \cite{Broschinsky2008,Grigoreanu2013,Hodgetts2005}, mientras que otros pocos han estudiado la literatura \cite{Salah2014b,Brhel2015}. El objetivo de nuestra investigación es conocer el estado actual de la usabilidad en los PDSA desde una perspectiva más amplia. Para analizar los beneficios de la usabilidad en los PDSA e identificar qué técnicas de usabilidad relacionadas con la actividad de Evaluación están siendo adoptadas y cómo están siendo adoptadas, hemos llevado a cabo un \textit{Systematic Mapping Study} (SMS) sobre la usabilidad y los PDSA. 
+
+Encontramos cinco trabajos \cite{Brhel2015}\cite{Sohaib2010}\cite{Salah2014b}\cite{DaSilva2011}\cite{Jurca2014} son revisiones sistematicas relacionadas con nuestra pregunta de investigación. El primer paper de Brhel y colegas \cite{Brhel2015} revisna la literatura dividiendola en cuatro dimensiones de integración (procesos, prácticas, tecnología y gente/social), y aunque logra identificar las practicas más usadas, concluye que la traducción de las prácticas de desarrollo ágil centrado en el uauario de la academia a la práctica sigue siendo un desafío. The second paper by Sohaib and Khan \cite{Sohaib2010} is a literature review e identifica que Los proyectos ágiles deben adoptar aspectos de ingeniería de usabilidad incorporando escenarios de usuario e incluyendo especialistas en usabilidad en el equipo. The third paper by Salah et al. \cite{Salah2014b} y tuvo como objetivo identificar y clasificar varios factores desafiantes que restringen el AUCDI y explorar las prácticas propuestas y los factores de éxito para enfrentar estos desafíos. Finalmente, Da Silva y colegas \cite{DaSilva2011} reportan  a systematic literature review on the integration of agile software development with UCD methods. While these papers [3][14][5][20] describe the state of integration between usability and the ADSP from different viewpoints, none determines which specific HCI usability techniques the agile development communities are starting to adopt. Therefore, we conducted a systematic mapping study (SMS) [19].
+
+Jurca \cite{Jurca2014} realiza un SMS que permite evaluar la integración Agile-UX desde varias tendencias como el uso de sprints 0 o LDUF, problemas organizacionales y recomendaciones para la integracion, artefatos y practicas mas comunes (Workshops, Lo-Fi Prototyping, Interviews, Meetings with Users and Scenarios) y marcos de integración. Sin embargo no precisa que métodos y cómo estan siendo usados los UEM dentro de los ASDP, which aren't the most feasible in the industry \cite{Jia2012}.
+
+%Este SMS se diferencia de otros trabajos similares \cite{Salah2014b}\cite{Brhel2015}\cite{DaSilva2011} porque busca identificar en la literatura existente trabajos con propuestas que permitan incorporar un conjunto de técnicas de usabilidad para integrar los PDSA con el DCU de una manera formalizada y sistematizada. Aspecto que ninguno de los tres trabajos similares mencionados anteriormente considera.\par
 
 La literatura sobre la integración de técnicas de usabilidad en los PDSA está compuesta por un conjunto de publicaciones desacopladas que estudian diferentes aspectos del tema. En este conjunto, se identifican dos problemas. En primer lugar, existen pocos trabajos que estudian como un todo el tema y reportan cuál es el estado actual de la integración de los PDSA con el DCU \cite{Brhel2015,DaSilva2011,Sohaib2010}. En segundo lugar, no existen propuestas formalizadas de incorporación de las técnicas de usabilidad en los PDSA \cite{Ferreira2012,Hodgetts2005,Hussain2009b} que establezcan, para cada técnica, guías sobre como incorporarlas.
 
