--- a/tex/related.tex
+++ b/tex/related.tex
@@ -1,10 +1,10 @@
 \section{Trabajos Relacionados}\label{sec-relacionados}
 Para investigar de manera general, entre otros aspectos, las técnicas de usabilidad que pueden ser incorporadas en los PDSA, algunos investigadores han realizado estudios empíricos \cite{Broschinsky2008,Grigoreanu2013,Hodgetts2005}, mientras que otros pocos han estudiado la literatura \cite{Salah2014b,Brhel2015}. El objetivo de nuestra investigación es conocer el estado actual de la usabilidad en los PDSA desde una perspectiva más amplia. Para analizar los beneficios de la usabilidad en los PDSA e identificar qué técnicas de usabilidad relacionadas con la actividad de Evaluación están siendo adoptadas y cómo están siendo adoptadas, hemos llevado a cabo un \textit{Systematic Mapping Study} (SMS) sobre la usabilidad y los PDSA. 
 
-Encontramos cinco trabajos \cite{Brhel2015}\cite{Sohaib2010}\cite{Salah2014b}\cite{DaSilva2011}\cite{Jurca2014} que son revisiones sistematicas relacionadas con nuestra pregunta de investigación. El primer paper de Brhel y colegas \cite{Brhel2015} revisa la literatura dividiendola en cuatro dimensiones de integración (procesos, prácticas, tecnología y gente/social), y aunque logra identificar las practicas más usadas, concluye que la traducción de las prácticas de desarrollo ágil centrado en el usuario de la academia a la práctica sigue siendo un desafío. El segundo trabajo por Sohaib y Khan \cite{Sohaib2010} una revisi\'{o}n de literatura e identifica que los proyectos ágiles deben adoptar aspectos de ingeniería de usabilidad incorporando escenarios de usuario e incluyendo especialistas en usabilidad en el equipo. El tercer trabajo por Salah y colegas \cite{Salah2014b} tiene como objetivo identificar y clasificar varios factores desafiantes que restringen la integración Agil-Diseño centrado en el usuario y explorar las pr\'{a}cticas propuestas y los factores de \'{e}xito para enfrentar estos desafíos. El cuarto trabajo de Da Silva y colegas \cite{DaSilva2011} reportan  a systematic literature review on the integration of agile software development with UCD methods. While these papers [3][14][5][20] describe the state of integration between usability and the ADSP from different viewpoints, none determines which specific HCI usability techniques the agile development communities are starting to adopt. Therefore, we conducted a systematic mapping study (SMS) [19].
+Encontramos cinco trabajos \cite{Brhel2015}\cite{Sohaib2010}\cite{Salah2014b}\cite{DaSilva2011}\cite{Jurca2014} que son revisiones sistematicas relacionadas con nuestra pregunta de investigación. El primer paper de Brhel y colegas \cite{Brhel2015} revisa la literatura dividiendola en cuatro dimensiones de integración (procesos, prácticas, tecnología y gente/social), y aunque logra identificar las practicas más usadas, concluye que la traducción de las prácticas de desarrollo ágil centrado en el usuario de la academia a la práctica sigue siendo un desafío. El segundo trabajo por Sohaib y Khan \cite{Sohaib2010} una revisi\'{o}n de literatura e identifica que los proyectos ágiles deben adoptar aspectos de ingeniería de usabilidad incorporando escenarios de usuario e incluyendo especialistas en usabilidad en el equipo. El tercer trabajo por Salah y colegas \cite{Salah2014b} tiene como objetivo identificar y clasificar varios factores desafiantes que restringen la integración Agil-Diseño centrado en el usuario y explorar las pr\'{a}cticas propuestas y los factores de \'{e}xito para enfrentar estos desafíos. El cuarto trabajo de Da Silva y colegas \cite{DaSilva2011} reportan una revisión de literatura que ha identificado temas recurrentes y patrones de las actividades y artefactos más comunes utilizados por equipos de diseñadores que integran PDSA y DCU.
 
+ sistemática sobre la integración  on the integration of agile software development with UCD methods. Por último, Jurca \cite{Jurca2014} realiza un SMS que permite evaluar la integración Agile-UX desde varias tendencias como el uso de sprints 0 o LDUF, problemas organizacionales y recomendaciones para la integracion, artefatos y practicas mas comunes (Workshops, Lo-Fi Prototyping, Interviews, Meetings with Users and Scenarios) y marcos de integración. Aunque, estos trabajos describen \cite{Brhel2015}\cite{Sohaib2010}\cite{Salah2014b}\cite{DaSilva2011}\cite{Jurca2014} el estado de la integación entre el DCU y los PDSA desde diferentes puntos de vista, sin embargo no precisa que métodos y cómo estan siendo usados los UEM dentro de los PDSA, siendo que los UEM no son los más sencillos de aplicar en los PDSA \cite{Jia2012}.
 
-Jurca \cite{Jurca2014} realiza un SMS que permite evaluar la integración Agile-UX desde varias tendencias como el uso de sprints 0 o LDUF, problemas organizacionales y recomendaciones para la integracion, artefatos y practicas mas comunes (Workshops, Lo-Fi Prototyping, Interviews, Meetings with Users and Scenarios) y marcos de integración. Sin embargo no precisa que métodos y cómo estan siendo usados los UEM dentro de los ASDP, which aren't the most feasible in the industry \cite{Jia2012}.
 
 %Este SMS se diferencia de otros trabajos similares \cite{Salah2014b}\cite{Brhel2015}\cite{DaSilva2011} porque busca identificar en la literatura existente trabajos con propuestas que permitan incorporar un conjunto de técnicas de usabilidad para integrar los PDSA con el DCU de una manera formalizada y sistematizada. Aspecto que ninguno de los tres trabajos similares mencionados anteriormente considera.\par
 
