--- a/tex/results.tex
+++ b/tex/results.tex
@@ -2,7 +2,7 @@
 
 En esta sección, discutiremos c\'omo los PDSA han adoptado las t\'ecnicas de usabilidad relacionadas con las actividades de Evaluaci\'on. Es importante mencionar que todas las t\'ecnicas de usabilidad identificadas y que han sido adoptadas en proyectos de desarrollo ágil, corresponden a las t\'ecnicas reportadas en la literatura y obtenidas a partir de nuestro SMS. Hemos clasificado todas y cada una de las t\'ecnicas de usabilidad que han sido adoptadas por los desarrollos de los PDSA. Esta clasificación la hemos realizado según un catálogo de técnicas de la IPO \cite{Ferre2005}, comparando cómo se aplicó la técnica con lo prescrito por la IPO.\par 
 
-Como resultado de esta clasificación hemos encontrado que las técnicas se están adoptando de dos maneras. En primer lugar, las técnicas de usabilidad que han sido aplicadas puras, es decir, la técnica ha sido aplicada según lo recomendado por la IPO. En segundo lugar, las técnicas que han sido adaptadas para poder ser aplicadas en los desarrollos ágiles. Hemos identificado que las técnicas de usabilidad más adoptadas en las actividades de Evaluaci\'on de los PDSA son: Evaluación Heurística, Pensar en Voz Alta, Test de Usabilidad y Focus Groups. 
+Como resultado de esta clasificación hemos encontrado que las técnicas se están adoptando de dos maneras. En primer lugar, las técnicas de usabilidad que han sido aplicadas puras, es decir, la técnica ha sido aplicada según lo recomendado por la IPO. En segundo lugar, las técnicas que han sido adaptadas para poder ser aplicadas en los desarrollos ágiles. Hemos identificado en la literatura que las técnicas de usabilidad más adoptadas en las actividades de Evaluaci\'on de los PDSA son: Evaluación Heurística \cite{Anwar2014}\cite{Faulring2012}\cite{Losada2012}\cite{Wale-Kolade2014}\cite{Kane2003}\cite{Sohaib2011}, Pensar en Voz Alta \cite{Kane2003}\cite{Losada2012}\cite{Losada2013b}\cite{Sohaib2011}, Test de Usabilidad \cite{Ambler2006}\cite{Wale-Kolade2014}\cite{Sy2007}\cite{Wolkerstorfer2008}\cite{Anwar2014}\cite{Ferreira2007}\cite{Hudson2003}\cite{Larusdottir2010}\cite{Oevad2015}\cite{Hussain2009b}\cite{Beyer2004}\cite{Dayton2009}\cite{Hussain2009b}\cite{Hussain2009c}\cite{Hussain2009d}\cite{Illmensee2009}\cite{Kushniruk2015}\cite{McGinn2013}\cite{Nielsen2012}\cite{Wolkerstorfer2008} y Focus Groups \cite{Anwar2014}\cite{Losada2012}\cite{Losada2013b}\cite{Jia2012}\cite{Oevad2015}\cite{Cajander2013}. 
 
 Encontramos técnicas que se han adoptado en los desarrollos ágiles de las dos maneras, es decir, pura y con adaptaciones. El tipo de adopción (pura o adaptada) depende de las caracterí­sticas y recursos particulares de cada proyecto. La técnica de Test de Usabilidad se ha adoptado con adaptaciones en la mayorí­a de los casos, según los estudios primarios. Muchos practicantes de equipos ágiles indican que es muy difícil realizar tests de usabilidad de la forma tradicional debido a los cronogramas ajustados de los \textit{sprints} \cite{DaSilva2015}. Por lo tanto, hemos identificado adaptaciones que proponen realizar tests de usabilidad sobre maquetas de papel o prototipos de baja fidelidad \cite{Hussain2009d}\cite{Beyer2004}, las cuales son menos formales y permiten tener retroalimentación de los usuarios durante el desarrollo de un \textit{sprint} o iteración. Nos llama la atención la técnica Test de Usabilidad porque en la gran mayoría ha sido adaptada (70\%). Hemos identificado que los autores adoptan tests de usabilidad más informales para cumplir con las condiciones de los PDSA. El 30\% restante, la técnica Test de Usabilidad se ha adoptado pura. Son tres las estrategias que identificamos permiten adoptar esta técnica con adaptaciones. En primer lugar, realizar Test de Usabilidad con los usuarios para evaluar cambios cada 2 o 3 \textit{sprints} con la ayuda de un equipo externo dedicado a temas de usabilidad \cite{Sy2007}\cite{Wale-Kolade2014}. En segundo lugar, definir Test de Usabilidad de bajo costo o micro tests. Un micro test \cite{Nielsen2012} es una prueba de usabilidad en línea, a menudo sin moderador. Esto implica realizar un número limitado de pruebas, de 3 a 5 pruebas para un determinado conjunto de tareas que se ha desarrollado durante una iteración en particular. Además, el test de usabilidad de bajo costo \cite{Kushniruk2015} es un método donde las pruebas se pueden llevar a cabo rápidamente, a bajo costo y en cualquier lugar, lo que permite realizar tests en cualquier etapa del ciclo de desarrollo ágil. En tercer lugar, evaluar la usabilidad por medio de Tests sobre prototipos de baja y alta fidelidad \cite{Beyer2004}\cite{Hussain2009d}. Esta estrategia permite evaluar una funcionalidad con el usuario sin necesidad de tener software funcional y permite realizar ciclos de revisión más cortos de manera más informal. Las formas de los prototipos pueden incluir prototipos de papel, \textit{screenshots}, transparencias de \textit{PowerPoint} o maquetas en \textit{html}.\par
 
